feat: app.ts and index.ts files and configurations

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "matheus-teles-xp-challenge",
   "version": "1.0.0",
   "description": "Repositório de Matheus Teles Ferreira com o Desafio Técnico da XP",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "test": "test"
   },
   "repository": {
@@ -22,5 +23,8 @@
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
