--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "eslint": "^8.20.0"
   }
 }
