--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/matheus-teles-git/matheus-teles-xp-challenge#readme",
   "dependencies": {
+    "@types/sequelize": "^4.28.14",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "lint": "^0.7.0",
+    "sequelize": "^6.21.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
@@ -27,6 +30,8 @@
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
-    "eslint": "^8.20.0"
+    "eslint": "^8.20.0",
+    "mysql2": "^2.3.3",
+    "sequelize-cli": "^6.4.1"
   }
 }
