--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path');
 
-export default {
-  'config': resolve(__dirname,'build','database','config', 'database.js'),
-  'models-path': resolve(__dirname,'build','database','models'),
-  'seeders-path': resolve(__dirname,'src','database', 'seeders'),
-  'migrations-path': resolve(__dirname,'src','database', 'migrations'),
+module.exports = {
+  'config': path.resolve(__dirname,'build','database','config', 'database.js'),
+  'models-path': path.resolve(__dirname,'build','database','models'),
+  'seeders-path': path.resolve(__dirname,'src','database', 'seeders'),
+  'migrations-path': path.resolve(__dirname,'src','database', 'migrations'),
 };
