--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.20.0",
     "mysql2": "^2.3.3",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "sequelize-typescript": "^2.1.3"
   }
 }
