--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "lint": "^0.7.0",
+    "mathjs": "^10.6.4",
     "sequelize": "^6.21.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
