--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/sequelize": "^4.28.14",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "lint": "^0.7.0",
     "mathjs": "^10.6.4",
     "sequelize": "^6.21.3",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
