--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "test": "test",
+    "test": "jest",
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
   "repository": {
@@ -31,13 +31,19 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/faker": "^6.6.9",
+    "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.20.0",
+    "jest": "^28.1.3",
     "mysql2": "^2.3.3",
     "sequelize-cli": "^6.4.1",
-    "sequelize-typescript": "^2.1.3"
+    "sequelize-mock": "^0.10.2",
+    "sequelize-mock-v5": "^1.2.4",
+    "sequelize-typescript": "^2.1.3",
+    "ts-jest": "^28.0.7"
   }
 }
