--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "lint": "^0.7.0",
     "mathjs": "^10.6.4",
     "sequelize": "^6.21.3",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
@@ -35,6 +37,8 @@
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.6",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.20.0",
